# chative-core-llm-devmode

./: .gitignore  main.py  pyproject.toml  retriever.py  todo.md
prompt/: detect_intent.py  prompt.py  response.py  response_entity_fallback.py
src/: utils.py
src/client/: milvus.py
src/prompt/: extract_entity.py  prompt.py  response.py  response_entity_fallback.py
src/tools/: knowledge.py
